# galaxy_evolution_under_a_big_crunch

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/: __init__.py
src/analysis/: __init__.py
src/cosmology/: __init__.py
src/simulations/: __init__.py
src/utils/: __init__.py
src/visualization/: __init__.py
